--- a/diary.css
+++ b/diary.css
@@ -5,24 +5,15 @@
 
 .nav {
     display: block;
-    text-align: center;
+    text-align: left;
     position: relative;
-    vertical-align: middle;
+
 }
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
-}
-.grid-item {
+    .form{
+     padding: 8px;
+     width: 70%;
     display: block;
-    background-color: darkorchid;
-    border: 1px solid #000000;
-    padding: 60px;
-    font-size: 30px;
-    text-align: center;
-}
-.item1 {
-    grid-row-start: 1;
-    grid-row-end: 3;
+    text-align: left;
+    font-size: 80px;
+
 }
