--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 body {
-    width: 500px;
+    width: auto;
     margin: 2rem;
     border: 2px solid #000000;
     padding: 2rem;
-    text-align: center;
+    text-align: right;
 }
