--- a/diary.css
+++ b/diary.css
@@ -3,12 +3,19 @@
     padding: 0;
 }
 
-.nav {
-    display: block;
-    text-align: left;
-    position: relative;
-
+.topnav {
+    background-color: black;
+    overflow: hidden;
 }
+    
+   .topnav a {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+    text-decoration: none;
+
+   }
     .form{
      padding: 8px;
      width: 70%;
