--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 body {
+    background-color: darksalmon;
     width: 500px;
     margin: 2rem;
     border: 2px solid #000000
     padding: 2rem;
-    
-    label {
+    text-align: center;
+}
+    .form {
         display: #000000;
         text-align: center;
     }
     input {
         width: auto;
     }
-}
+
 .image-logo {
 width: 300px;
 }
