--- a/login.css
+++ b/login.css
@@ -1,7 +1,12 @@
 body {
+    background-color: blanchedalmond;
     width: auto;
     margin: 2rem;
     border: 2px solid #000000;
-    padding: 2rem;
-    text-align: right;
+    padding: 0;
+    text-align: center;
+}
+.logo {
+    position: relative;right:30%;
+    height: 10px;
 }
